tests/fail/break_in_a_function.tig
let
    function suc(x : int) : int =
        let
            var y := 1
        in
            break;
            x + y
        end
in
    for i := 0 to 10 do
        let
            function zero() : int = (if i = 5 then break; 0)
        in
            break
        end        
end

