tests/fail/break_in_a_function.err
Semantic Error: invalid usage of the break statement at line 6.
Semantic Error: invalid usage of the break statement at line 12.
